# flash-card-app

./: Cargo.toml
src/: cli.rs  command.rs  input.rs  main.rs  ui.rs
src/data/: test_data.csv
templates/: flash_card.txt  flash_card_v2.txt  hello.txt
