[package]
name = "flash-cards-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
clap = { version = "4.3.21", features = ["derive", "wrap_help"] }
clearscreen = "2.0.1"
flash_cards = {path = "../flash-cards"}
